@@ -1,0 +1,15 @@
+BEGIN:VCALENDAR
+VERSION:2.0
+METHOD:PUBLISH
+BEGIN:VEVENT
+DTSTART:20010701T213000Z
+DTEND:20010701T223000Z
+LOCATION:Banque Nationale Stage ()
+UID:20141020T130403Z@montrealjazzfest.com
+DTSTAMP:20141020T130403Z
+SUMMARY:Susi Hyldgaard - Festival International de Jazz de Montréal
+DESCRIPTION:SUSI HYLDGAARD\n\nAs the new millennium opens, the prevailing style is the mélange... but you still have to know how to measure out the ingredients. Susi Hyldgaard’s facility with jazz and world music is stunning the critics. Want proof? She’s been compared to Björk, Neneh Cherry and Cassandra Wilson but the singer/pianist/accordionist sets herself apart by virtue of a thoroughly personal style, spontaneous and blazingly passionate. Without a doubt, one of the most striking talents to emerge from the Danish music scene in the last five years. \n\nhttp://www.montrealjazzfest.com/program/concert.aspx?id=3579\n
+PRIORITY:5
+CLASS:PUBLIC
+END:VEVENT
+END:VCALENDAR
